--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
-* {
-  /* border: 1px solid blue; */
-}
 
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App > div {
   width: 100vw;
@@ -15,18 +12,18 @@
 
 /*  BIO  */
 
-.bio-box {
+/* .bio-box {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   margin: 4em 4em 0em 2em;
   background-color: grey;
-}
+} */
 
-.bio-text {
+/* .bio-text {
   margin: 0em 2em;
-}
+} */
 
 .headshot {
   width: 10em;
