--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App {
   text-align: center;
-  background-color: black;
+  /* background-color: black; */
   color: white;
 }
 
@@ -63,7 +63,6 @@
   color: red;
   margin: 1em 1em;
 }
-
 /* MEDIA QUERIES */
 /* bio & image switch when mobile */
 @media screen and (max-width: 600px) {
