--- a/src/App.css
+++ b/src/App.css
@@ -23,25 +23,18 @@
   margin-top: 80px;
   border: 2px solid black;
 }
-
 #Resume {
   width: 100vw;
   min-height: 55vh;
   margin-top: 150px;
   border: 2px solid black;
 }
-
 #Projects {
   width: 100vw;
   min-height: 55vh;
   margin-top: 80px;
   border: 2px solid black;
 }
-
-.carousel-item {
-  margin-left: auto;
-}
-
 #Resources {
   width: 100vw;
   min-height: 55vh;
@@ -51,6 +44,10 @@
 }
 .footer {
   box-shadow: 0 0 20px white, 0 0 40px #B026FF, 0 0 42px #B026FF,0 0 44px #B026FF, 2px 2px 2px rgba(176,38,255,0);
+}
+#carouselSlides{
+  max-width: 700px;
+  min-width: 400px;
 }
 /*/////////*/
 /*  icons  */
@@ -66,11 +63,44 @@
   width: 5em;
   color: #B026FF;
 }
+/* carousel icons */
+.projects .carousel-control-prev-icon {
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23B026FF' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+.projects .carousel-control-next-icon {
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23B026FF' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")
+}
+.carousel-control-prev-icon {
+    position: absolute;
+    bottom: 80px;
+    left: 45px;
+}
+.carousel-control-next-icon {
+    position: absolute;
+    bottom: 80px;
+    right: 45px;
+}
 
 /*///////////////////////*/
 /*     MEDIA QUERIES    */
 /* ///////////////////// */
-
+  /* carousel arrows for mobile view */
+  @media (max-width: 480px) {
+    .carousel-control-prev-icon {
+        position: absolute;
+        bottom: 60px;
+        left: 25px;
+    }
+    .carousel-control-next-icon {
+        position: absolute;
+        bottom: 60px;
+        right: 25px;
+    }
+  }
   /* Small devices (landscape phones, 544px and up) */
   @media (max-width: 543px) {
     .icon {
