--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
  * {
-   font-family: 'Electrolize', sans-serif
+   font-family: 'Electrolize', sans-serif;
  }
 /*//////////////*/
 /* text shadows */
@@ -92,6 +92,14 @@
 /*     MEDIA QUERIES    */
 /* ///////////////////// */
   /* carousel arrows for mobile view */
+  @media (max-width: 414px) {
+    /* .big-container {
+      margin-left: 2em;
+    } */
+    .container-sm {
+      padding-right: 0;
+    }
+  }
   @media (max-width: 480px) {
     .carousel-control-prev-icon {
         position: absolute;
@@ -103,6 +111,9 @@
         bottom: 60px;
         right: 25px;
     }
+    /* #carouselSlides{
+      margin: auto;
+    } */
   }
   /* Small devices (landscape phones, 544px and up) */
   @media (max-width: 543px) {
