--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
 .link {
   text-shadow: 0 0 20px white, 0 0 40px #B026FF, 0 0 55px #B026FF,0 0 65px #B026FF, 2px 2px 2px rgba(176,38,255,0);
 }
+.footer {
+  box-shadow: 0 0 20px white, 0 0 40px #B026FF, 0 0 42px #B026FF,0 0 44px #B026FF, 2px 2px 2px rgba(176,38,255,0);
+}
+.glow {
+  box-shadow: 0 0 20px white, 0 0 40px #B026FF, 0 0 42px #B026FF,0 0 44px #B026FF, 2px 2px 2px rgba(176,38,255,0);
+}
 
 /*/////////////*/
 /* page sizing */
@@ -44,9 +50,6 @@
   margin-top: 85px;
   margin-bottom: 200px;
   border: 2px solid black;
-}
-.footer {
-  box-shadow: 0 0 20px white, 0 0 40px #B026FF, 0 0 42px #B026FF,0 0 44px #B026FF, 2px 2px 2px rgba(176,38,255,0);
 }
 #carouselSlides{
   max-width: 700px;
@@ -91,15 +94,21 @@
 /*///////////////////////*/
 /*     MEDIA QUERIES    */
 /* ///////////////////// */
-  /* carousel arrows for mobile view */
-  @media (max-width: 414px) {
-    /* .big-container {
-      margin-left: 2em;
-    } */
-    .container-sm {
-      padding-right: 0;
-    }
+/* mobile view layout fix */
+@media (max-width: 414px) {
+  .container-sm {
+    padding-right: 0;
+    padding-left: 10px;
   }
+  .nav-footer {
+    margin-left: 2em;
+  }
+  .footer {
+    padding: 0em 1em;
+    font-size: 12px;
+  }
+}
+  /* carousel arrows for mobile view */
   @media (max-width: 480px) {
     .carousel-control-prev-icon {
         position: absolute;
